
$Date$

VEGAN STABLE VERSIONS

Version 1.15-2 (opened January 14, 2009)

	* copied kendall.global at rev767 from pkg/vegan tree to
	branches/1.15.

	* merged r608: plot.radfit gained argument log = "y".

	* merged r538: orditkplot makes TIFF graphics.

	* merged r539, 540: spantree retains names, and plot.spantree uses
	ordilabel in plots.

	* merged r676: commsimulator results retain names.
	
	* merged r518: doubled "the" in man pages of decorana, spantree,
	decostand, specpool and metaMDS.
	
	* merged r750: better example in add1.cca.Rd.

	* merged r735 & r736: stepacross fixes in metaMDSdist with
	open-ended dissimilarities (Euclidean, Manhattan etc.).

	* merged r728: oecosimu.Rd example knows "statistic" argument.

	* merged r689: added text.procrustes.
	
	* merged r683 & r690: anova.cca(..., by = "margin") gained
	argument "cutoff = 1", and doc expanded.

	* merged r686: rad.null failed with families gaussian and Gamma.

	* merged r678: anovacca.bymargin was not setting RNG properly for
	the second term.

	* merged r674: metaMDSdist does not evaluate no.shared if set
	noshared=0. 
	
	* merged r673: vegdist doc fixes for Horn-Morisita equation.
	
	* merged r671: ordirgl warnings with type = "t".

	* merged r559, r662, r663, r664: adonis adds one both to numerator
	and denominator in permuation tests, increases default number of
	permutations from 5 to 999, and gains a 'terms' component.

	* merged r660: Rd parser v2 fixes to make vegan R 2.9.0-ready.

	* merged r652, r657: cleaner output of summary.cca in unconstrained
	models (PCA, CA).
	
Version 1.15-1 (released December 19, 2008)

	* merged r644: \$ escape fix in Rd files.
	
	* added warning on permatswap, since the "swap" algorithm used
	there appeared to be biased in tests run by PS & JO.

	* merged r598: text.decorana failed.

	* merged r590: betadisper and related functions now work when
	'group' represents a single group/level.
	
	* merged r550, 552: neat plot.cca when input rownames are NULL.
